--- a/Pipfile
+++ b/Pipfile
@@ -20,4 +20,4 @@ python_version = "3.9"
 serve = "uvicorn src.main:app --reload --host=127.0.0.1 --port=8004"
 proxy = "kubectl port-forward svc/svc-files 8004:8004"
 build = "docker buildx build -f Dockerfile --platform linux/amd64 -t mx2542/anti-files:latest . --push"
-deploy = "kubectl apply -f deployment.yaml"
+deploy = "helm install files chart"
