--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ autopep8 = "==1.6.0"
 uvicorn = {extras = ["standard"], version = "==0.17.6"}
 requests-toolbelt = "==0.9.1"
 python-multipart = "==0.0.5"
+minio = "*"
 
 [dev-packages]
 
