--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,14 @@ asgiref==3.5.2
 attrs==21.4.0
 autopep8==1.6.0
 certifi==2022.6.15
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
 click==8.1.3
 fastapi==0.78.0
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
 iniconfig==1.1.1
+minio==7.1.9
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
@@ -20,15 +21,15 @@ pytest==7.1.2
 python-dotenv==0.20.0
 python-multipart==0.0.5
 PyYAML==6.0
-requests==2.28.0
+requests==2.28.1
 requests-toolbelt==0.9.1
 six==1.16.0
 sniffio==1.2.0
 starlette==0.19.1
 toml==0.10.2
 tomli==2.0.1
-typing_extensions==4.2.0
-urllib3==1.26.9
+typing_extensions==4.3.0
+urllib3==1.26.10
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8.2
