--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,5 +35,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          file: "{context}/boxter.Dockerfile"
+          file: "boxter.Dockerfile"
           tags: mx2542/anti-boxter:latest
