--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,8 +24,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push files
         uses: docker/build-push-action@v3
         with:
           push: true
           tags: mx2542/anti-files:latest
+
+
+      - name: Build and push boxter
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          file: "boxter.Dockerfile"
+          tags: mx2542/anti-boxter:latest
