--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ uvicorn = {extras = ["standard"], version = "==0.17.6"}
 requests-toolbelt = "==0.9.1"
 python-multipart = "==0.0.5"
 minio = "*"
+loguru = "*"
 
 [dev-packages]
 
