feat: pytest plugin

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ requests-toolbelt = "==0.9.1"
 python-multipart = "==0.0.5"
 minio = "*"
 loguru = "*"
+pytest-html = "*"
 
 [dev-packages]
 
@@ -24,3 +25,5 @@ proxy = "kubectl port-forward svc/svc-files 8004:8004"
 build = "docker buildx build -f Dockerfile --platform linux/amd64 -t mx2542/anti-files:latest . --push"
 build-boxter = "docker buildx build -f boxter.Dockerfile --platform linux/amd64 -t mx2542/anti-boxter:latest . --push"
 deploy = "helm install files chart"
+test = 'pytest -v --html=report.html --self-contained-html'
+build-plugin = 'python setup.py sdist bdist_wheel'
