--- a/Pipfile
+++ b/Pipfile
@@ -23,5 +23,4 @@ python_version = "3.9"
 serve = "uvicorn src.main:app --reload --host=127.0.0.1 --port=8004"
 build-qt = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:1.0 . --push"
 build = "docker buildx build -f Dockerfile --platform linux/amd64 -t mx2542/files:latest . --push"
-test = 'pytest -v --html=report/report.html --self-contained-html --host=127.0.0.1:9000'
-build-plugin = 'python setup.py sdist bdist_wheel'
+test = 'pytest -v --html=report/report.html --self-contained-html'
