--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,5 @@ pytest-html = "*"
 python_version = "3.9"
 
 [scripts]
-serve = "uvicorn src.main:app --reload --host=127.0.0.1 --port=8004"
-build-qt = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:1.0 . --push"
-build = "docker buildx build -f Dockerfile --platform linux/amd64 -t mx2542/files:latest . --push"
-test = 'pytest -v --html=report/report.html --self-contained-html'
+build = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:1.0 . --push"
+chart = "sh scripts/push-chart.sh"
