--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: files
-description: A files chart for tink
+description: A files chart for atop
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,13 +15,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-# appVersion: "0.1.2"
-
-# dependencies:
-#   - name: nfs-server-provisioner
+appVersion: "0.1.2"
