--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -68,6 +68,8 @@ spec:
             - "--reload"
             - "--host=0.0.0.0"
             - "--port=8004"
+            - "--debug"
+            - "--log-config=uvicorn_config.json"
           ports:
             - containerPort: 8004
           imagePullPolicy: {{ .Values.imagePullPolicy }}
