--- a/Pipfile
+++ b/Pipfile
@@ -49,6 +49,6 @@ python_version = "3.10"
 
 [scripts]
 chart = "sh scripts/push-chart.sh"
-dev = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:dev-1.1 . --push"
-test = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:test-1.2 . --push"
-production = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:1.2 . --push"
+dev = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:dev-1.4 . --push"
+test = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:test-1.4 . --push"
+stable = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:1.4 . --push"
