--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -35,10 +35,8 @@ spec:
       labels:
         app: "{{ .Release.Name }}-{{ .Chart.Name }}"
     spec:
-{{- if .Values.private }}
       imagePullSecrets:
         - name: regcred
-{{- end }}
       containers:
         - name: files
           image: "{{ .Values.registry }}/{{ .Values.repository }}/{{ .Values.image }}"
@@ -72,7 +70,7 @@ spec:
             - "--log-config=uvicorn_config.json"
           ports:
             - containerPort: 8004
-          imagePullPolicy: {{ .Values.imagePullPolicy }}
+          imagePullPolicy: Always
           volumeMounts:
             - mountPath: /files/share
               name: share-volume
