chore: host path

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -109,4 +109,4 @@ spec:
         - name: share-volume
           # emptyDir: {}
           hostPath:
-            path: /atop/share
+            path: /data/atop/share
