--- a/chart/templates/pvc.yaml
+++ b/chart/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "data-{{ .Release.Name }}-{{ .Chart.Name }}"
+  name: "data-atop-reports"
 spec:
   storageClassName: local
   accessModes:
