--- a/chart/templates/pvc.yaml
+++ b/chart/templates/pvc.yaml
@@ -1,12 +1,12 @@
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: data-atop-reports
-# spec:
-#   storageClassName: local
-#   accessModes:
-#     - "ReadWriteOnce"
-#   resources:
-#     requests:
-#       storage: 10Gi
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data-atop-reports
+spec:
+  storageClassName: local
+  accessModes:
+    - "ReadWriteOnce"
+  resources:
+    requests:
+      storage: 10Gi
 
