--- a/Pipfile
+++ b/Pipfile
@@ -48,5 +48,5 @@ websockets = "==10.4"
 python_version = "3.10"
 
 [scripts]
-chart = "sh scripts/push-chart.sh"
-docker = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:1.0.6 . --push"
+chart = "sh scripts/chart.sh"
+docker = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:latest . --push"
