--- a/Pipfile
+++ b/Pipfile
@@ -49,4 +49,4 @@ python_version = "3.10"
 
 [scripts]
 chart = "sh scripts/chart.sh"
-docker = "docker buildx build -f Dockerfile --platform linux/amd64 -t dockerhub.qingcloud.com/qingtest/files:latest . --push"
+docker = "sh scripts/docker.sh"
