feat: report life cycle

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -85,6 +85,8 @@ spec:
                 configMapKeyRef:
                   name: atop-globe-config
                   key: env
+            - name: LIFE_CYCLE
+              value: '30'
       volumes:
         - name: share-volume
           persistentVolumeClaim:
