--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -86,7 +86,7 @@ spec:
                   name: atop-globe-config
                   key: env
             - name: LIFE_CYCLE
-              value: '30'
+              value: "30"
       volumes:
         - name: share-volume
           persistentVolumeClaim:
