--- a/chart/templates/comfigmap.yaml
+++ b/chart/templates/comfigmap.yaml
@@ -64,18 +64,18 @@ data:
         if __name__ == "__main__":
             if os.path.exists(report):
                 try:
-                    source_folder = report
-                    target_folder = f"/report/{prefix}{report}"
-                    logger.info(f'开始复制测试报告到文件服务器共享存储目录:{target_folder} ...')
-                    try:
-                        shutil.rmtree(target_folder)
-                        logger.info(f'存在同名目录: {target_folder}')
-                        logger.info(f'删除同名目录: {target_folder}')
-                    except FileNotFoundError:
-                        pass
+                    # source_folder = report
+                    # target_folder = f"/report/{prefix}{report}"
+                    # logger.info(f'开始复制测试报告到文件服务器共享存储目录:{target_folder} ...')
+                    # try:
+                    #     shutil.rmtree(target_folder)
+                    #     logger.info(f'存在同名目录: {target_folder}')
+                    #     logger.info(f'删除同名目录: {target_folder}')
+                    # except FileNotFoundError:
+                    #     pass
 
-                    shutil.copytree(source_folder, target_folder)
-                    logger.info('复制完成')
+                    # shutil.copytree(source_folder, target_folder)
+                    # logger.info('复制完成')
 
                     push('result', prefix)
                 except Exception as err:
