--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -90,4 +90,4 @@ spec:
       volumes:
         - name: share-volume
           persistentVolumeClaim:
-            claimName: data-atop-reports
+            claimName: "{{ .Release.Name }}-minio"
