--- a/chart/charts/minio/templates/deployment.yaml
+++ b/chart/charts/minio/templates/deployment.yaml
@@ -241,7 +241,7 @@ spec:
         - name: export
         {{- if .Values.persistence.enabled }}
           persistentVolumeClaim:
-            claimName: {{ .Values.persistence.existingClaim | default (include "minio.fullname" .) }}
+            claimName: data-{{ .Values.persistence.existingClaim | default (include "minio.fullname" .) }}
         {{- else }}
           emptyDir: {}
         {{- end }}
