--- a/chart/charts/minio/templates/pvc.yaml
+++ b/chart/charts/minio/templates/pvc.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ template "minio.fullname" . }}
+  name: data-{{ template "minio.fullname" . }}
   labels:
     app: {{ template "minio.name" . }}
     chart: {{ template "minio.chart" . }}
