--- a/chart/charts/minio/values.yaml
+++ b/chart/charts/minio/values.yaml
@@ -108,7 +108,7 @@ persistence:
   ##
   ## Storage class of PV to bind. By default it looks for standard storage class.
   ## If the PV uses a different storage class, specify that here.
-  storageClass: "local-path"
+  storageClass: ""
   VolumeName: ""
   accessMode: ReadWriteOnce
   size: 30Gi
