--- a/chart/templates/nginx.yaml
+++ b/chart/templates/nginx.yaml
@@ -24,61 +24,63 @@ spec:
       labels:
         app: "{{ .Release.Name }}-nginx"
     spec:
-      # imagePullSecrets:
-      #   - name: regcred
       containers:
         - name: nginx
-          image: no8ge/files-nginx:1.0
+          image: nginx
           imagePullPolicy: Always
           ports:
             - containerPort: 80
           volumeMounts:
             - name: data
               mountPath: /data
+            - name: config
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
       volumes:
         - name: data
           persistentVolumeClaim:
             claimName: "data-{{ .Release.Name }}-minio"
+        - name: config
+          configMap:
+            name: files-nginx-conf
 
 ---
-apiVersion: apisix.apache.org/v2
-kind: ApisixRoute
+apiVersion: v1
+kind: ConfigMap
 metadata:
-  name: "{{ .Release.Name }}-nginx"
-spec:
-  http:
-    - name: "{{ .Release.Name }}-nginx"
-      match:
-        paths:
-          - /{{ .Release.Name }}/share/*
-        methods:
-          - GET
-          - POST
-          - PUT
-          - DELETE
-          - PATCH
-          - HEAD
-          - OPTIONS
-          - CONNECT
-          - TRACE
-      plugins:
-        - name: proxy-rewrite
-          enable: true
-          config:
-            regex_uri:
-              - /{{ .Release.Name }}/share/*
-              - /
-      websocket: true
-      backends:
-        - serviceName: "{{ .Release.Name }}-nginx"
-          servicePort: 80
-
----
-apiVersion: apisix.apache.org/v2
-kind: ApisixUpstream
-metadata:
-  name: "{{ .Release.Name }}-nginx"
-spec:
-  scheme: http
-  loadbalancer:
-    type: roundrobin
+  name: files-nginx-conf
+data:
+  nginx.conf: |
+    user nginx;
+    worker_processes 1;
+    error_log /var/log/nginx/error.log warn;
+    pid /var/run/nginx.pid;
+    events {
+      worker_connections 1024;
+    }
+    http {
+      include /etc/nginx/mime.types;
+      default_type application/octet-stream;
+      log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+      access_log /var/log/nginx/access.log main;
+      sendfile on;
+      keepalive_timeout 65;
+      server {
+        listen 80;
+        server_name localhost;
+        location / {
+          add_header Access-Control-Allow-Origin *;
+          add_header Access-Control-Allow-Methods *;
+          root /data;
+          autoindex on;
+          index index.html;
+          try_files $uri $uri/ /index.html;
+        }
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+          root /error;
+        }
+      }
+    }
